--- a/index_flora.html
+++ b/index_flora.html
@@ -67,15 +67,85 @@
         <h1 class="titulo_efeito">Flora</h1>
     </div>
 
+    <h1 class="Titulo_comentario">"..A Vida Sempre Encontra um Meio.."</h1>
+
     <div class="container-central2">
       <h2 class="title3">Surgimento</h2>
-      <div class="img-box3"></div>
+      <div class="img-box-primeiro"></div>
      
-      <p class="text3">A história do personagem é essencial: como ele viveu antes do Ark, como chegou lá, e como aceitou viver na ilha até tentar escapar. Suas habilidades e escolhas na "outra vida" serão cruciais para a sobrevivência. Afinal, "o que você fez, fará ainda mais, seja bom ou ruim."</p>
+      
+
+      <p class="text3">Tudo no Ark é envolto em histórias e mistérios. Alguns acreditam que uma criatura antiga plantou as sementes da vida na ilha e ainda se esconde nas profundezas das florestas. Outros dizem que a terra sempre foi assim, desde antes dos primeiros sobreviventes, ou que um mago insano deu origem à vida. Há também quem defenda que a vida simplesmente surgiu e evoluiu por conta própria. As origens permanecem incertas, alimentando lendas e especulações entre os habitantes.</p>
     </div>
   </div>
 
+  <div class="container">
+    <div class="img-box">
+      <!-- A imagem será definida via CSS -->
+    </div>
+    <div class="text-box">
+      <h2>Inverno</h2>
+      <p>No inverno do Ark, os animais enfrentam grandes desafios para sobreviver. Muitos se escondem em locais protegidos e armazenam comida para atravessar a estação, enquanto outros, com metabolismos adaptados, conseguem viver com tranquilidade. Entretanto, os recursos naturais, como frutos, tornam-se escassos, e a neve cobre o ambiente com uma temperatura média de 9°C e baixos níveis de umidade no ar. Predadores se adaptam para caçar presas adormecidas, enquanto voadores, insetos, herbívoros alfa e répteis tornam-se mais fáceis de domar, especialmente aqueles que não regulam sua temperatura corporal. Os carnívoros saem em busca de comida, enquanto os herbívoros preferem se esconder para sobreviver. </p>
+    </div>
+  </div>
 
+  <div class="container2">
+  
+    <div class="text-box2">
+      <h2>Verão</h2>
+      <p>No verão, a temperatura elevada faz com que as criaturas busquem refúgio próximo a rios e riachos, enquanto os pântanos se tornam áreas extremamente perigosas. Chuvas intensas e imprevisíveis alternam entre secas severas e enchentes que podem alagar grandes regiões. Nessa estação, insetos, répteis, voadores e herbívoros são mais difíceis de domar devido às condições climáticas, enquanto os carnívoros tornam-se mais receptivos à domesticação. Enxames de insetos e carnívoros competem por carcaças, enquanto bandos de herbívoros se juntam para se proteger contra os predadores.</p>
+    </div>
+    <div class="img-box2">
+      <!-- A imagem será definida via CSS -->
+    </div>
+  </div>
+
+  <div class="container3">
+    <div class="img-box3">
+      <!-- A imagem será definida via CSS -->
+    </div>
+    <div class="text-box3">
+      <h2>Outono</h2>
+      <p>No outono do Ark, ventos fortes dominam a estação, enquanto recursos tornam-se escassos e as temperaturas permanecem amenas. Essas condições forçam as criaturas a abandonarem seus habitats habituais em busca de alimento, especialmente os herbívoros, que enfrentam a falta de vegetação ideal. Durante esse período, insetos, herbívoros e criaturas aquáticas sem metabolismo regulado são mais fáceis de domar, enquanto os carnívoros tornam-se mais difíceis de controlar. O comportamento predatório se intensifica, com carnívoros seguindo os herbívoros em suas jornadas por comida.</p>
+    </div>
+  </div>
+
+  <div class="container4">
+  
+    <div class="text-box4">
+      <h2>Primavera</h2>
+      <p>Na primavera, a temperatura começa a subir de maneira amena, criando um ambiente favorável para os herbívoros, que se beneficiam da floração e do aumento de recursos naturais na ilha. A estação marca o aquecimento gradual da ilha, preparando-a para o verão, com cheias repentinas que podem se tornar problemáticas. Nesse cenário, os carnívoros se tornam mais fáceis de domar, enquanto os herbívoros se tornam mais difíceis devido ao aumento da oferta de comida e à maior mobilidade. Os insetos também se tornam mais difíceis de domar, pois saem de seus esconderijos em busca de presas para caçar.</p>
+    </div>
+    <div class="img-box4">
+      <!-- A imagem será definida via CSS -->
+    </div>
+  </div>
+
+  <div class="container-aether">
+    <h2 class="title5">Aethers</h2>
+    <div class="img-box5"></div>
+   
+    <p class="text5">Surtos de Aether são uma estação imprevisível que pode ocorrer durante outras, trazendo uma explosão de energia mágica sobre a ilha. Esse fenômeno faz com que criaturas vagueiem em busca de abates ou carcaças para consumir o Aether acumulado nos corpos. A estação é marcada por temperaturas alternando entre quente e fria em algumas regiões, além de constante chuva e neblina cobrindo toda a ilha. Durante um surto de Aether, todas as criaturas normais tornam-se mais fáceis de domar, enquanto as corrompidas e elementais se tornam extremamente agressivas.</p>
+  </div>
+</div>
+
+<div class="container-cards">
+  <!-- Carta 1 -->
+  <a href="index_flora_aguas.html" class="card" id="card1">
+    <img src="imagens/flora_aguas.webp" alt="Carta 1">
+    <div class="content-card">
+      <p>Biomas das Águas </p>
+    </div>
+  </a>
+
+  <!-- Carta 2 -->
+  <a href="index_flora_terras.html" class="card" id="card2">
+    <img src="imagens/flora_terras.jpg" alt="Carta 2">
+    <div class="content-card">
+      <p>Biomas das Terras</p>
+    </div>
+  </a>
+</div>
 
       <!--footer----------------------------------------------------------------------------->
     <footer>
