--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="card card-4" onclick="goToPage('index_personagens.html')">
     <span></span>
     <div class="content">
-        <p>Personagens</p>
+        <p>Bonecos</p>
     </div>
 </div>
 
