--- a/index_flora_terras.html
+++ b/index_flora_terras.html
@@ -24,11 +24,11 @@
     </div>
     <div class="nav-links">
         <a href="index.html"><span>Início</span></a>
-        <a href="index_mapas.html"><span>Mapas</span></a>
-        <a href="index_história.html"><span>Lore</span></a>
-        <a href=""><span>Regras</span></a>
-        <a href=""><span>Dinos</span></a>
-        <a href=""><span>Ciências</span></a>
+      <a href="index_mapas.html"><span>Mapas</span></a>
+      <a href="index_história.html"><span>Lore</span></a>
+      <a href="index_regras.html"><span>Regras</span></a>
+      <a href="index_dinos.html"><span>Dinos</span></a>
+      <a href=""><span>Ciências</span></a>
     </div>
     <!-- Botão Glow -->
     <div class="dado-container">
