--- a/index_mapas.html
+++ b/index_mapas.html
@@ -23,12 +23,12 @@
         <h1>RPG ARK</h1>
     </div>
     <div class="nav-links">
-        <a href="index.html"><span>Início</span></a>
-        <a href="index_mapas.html"><span>Mapas</span></a>
-        <a href="index_história.html"><span>Lore</span></a>
-        <a href="#regras"><span>Regras</span></a>
-        <a href="#dinos"><span>Dinos</span></a>
-        <a href="#Ciências"><span>Ciências</span></a>
+      <a href="index.html"><span>Início</span></a>
+      <a href="index_mapas.html"><span>Mapas</span></a>
+      <a href="index_história.html"><span>Lore</span></a>
+      <a href="index_regras.html"><span>Regras</span></a>
+      <a href="index_dinos.html"><span>Dinos</span></a>
+      <a href=""><span>Ciências</span></a>
     </div>
     <!-- Botão Glow -->
     <div class="dado-container">
