--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <a href="index.html"><span>Início</span></a>
         <a href="index_mapas.html"><span>Mapas</span></a>
         <a href="index_história.html"><span>Lore</span></a>
-        <a href=""><span>Regras</span></a>
-        <a href=""><span>Dinos</span></a>
+        <a href="index_regras.html"><span>Regras</span></a>
+        <a href="index_dinos.html"><span>Dinos</span></a>
         <a href=""><span>Ciências</span></a>
     </div>
     <!-- Botão Glow -->
