--- a/index_regras.html
+++ b/index_regras.html
@@ -28,8 +28,8 @@
       <a href="index_mapas.html"><span>Mapas</span></a>
       <a href="index_história.html"><span>Lore</span></a>
       <a href="index_regras.html"><span>Regras</span></a>
-      <a href="index_dinos.html"><span>Dinos</span></a>
-      <a href=""><span>Ciências</span></a>
+      <a href="index_bloqueado.html"><span>Dinos</span></a>
+      <a href="index_ciencia.html"><span>Ciências</span></a>
     </div>
     <!-- Botão Glow -->
     <div class="dado-container">
@@ -136,9 +136,9 @@
         <h2>Links Úteis</h2>
         <ul>
           <li><a href="index_mapas.html">Mapas</a></li>
-          <li><a href="#tribos">Tribos</a></li>
-          <li><a href="#regras">Regras</a></li>
-          <li><a href="#itens">Itens</a></li>
+              <li><a href="index_tribos.html">Tribos</a></li>
+              <li><a href="index_regras.html">Regras</a></li>
+              <li><a href="index_itens.html">Itens</a></li>
         </ul>
       </div>
       <div class="footer-section social">
