--- a/index_flora_terras.html
+++ b/index_flora_terras.html
@@ -23,12 +23,12 @@
         <h1>RPG ARK</h1>
     </div>
     <div class="nav-links">
-        <a href="index.html"><span>Início</span></a>
+      <a href="index.html"><span>Início</span></a>
       <a href="index_mapas.html"><span>Mapas</span></a>
       <a href="index_história.html"><span>Lore</span></a>
       <a href="index_regras.html"><span>Regras</span></a>
-      <a href="index_dinos.html"><span>Dinos</span></a>
-      <a href=""><span>Ciências</span></a>
+      <a href="index_bloqueado.html"><span>Dinos</span></a>
+      <a href="index_ciencia.html"><span>Ciências</span></a>
     </div>
     <!-- Botão Glow -->
     <div class="dado-container">
@@ -134,9 +134,9 @@
         <h2>Links Úteis</h2>
         <ul>
           <li><a href="index_mapas.html">Mapas</a></li>
-          <li><a href="#tribos">Tribos</a></li>
-          <li><a href="#regras">Regras</a></li>
-          <li><a href="#itens">Itens</a></li>
+          <li><a href="index_tribos.html">Tribos</a></li>
+          <li><a href="index_regras.html">Regras</a></li>
+          <li><a href="index_itens.html">Itens</a></li>
         </ul>
       </div>
       <div class="footer-section social">
