--- a/index.html
+++ b/index.html
@@ -140,9 +140,11 @@
         </div>
     </div>
     <div class="card card-8">
+        <a href="index_efeitos.html">
         <span></span>
         <div class="content">
             <p>Efeitos</p>
+        </a>
         </div>
     </div>
     <div class="card card-9">
