--- a/index.html
+++ b/index.html
@@ -92,18 +92,18 @@
 
 <!--cards-->
 <div class="container-cards" >
-    <div class="card card-1">
+    <a href="index_bloqueado.html" class="card card-1">
         <span></span>
         <div class="content">
             <p>Colossos</p>
         </div>
-    </div>
-    <div class="card card-2">
+    </a>
+    <a href="index_bloqueado.html" class="card card-2">
         <span></span>
         <div class="content">
-            <p>Chefes</p>
+            <p>Bosses</p>
         </div>
-    </div>
+    </a>
     <a href="index_poderes.html" class="card card-3">
         <span></span>
         <div class="content">
@@ -147,13 +147,13 @@
         </a>
         </div>
     </div>
-    <div class="card card-9">
+    <div class="card card-9 "onclick="goToPage('index_itens.html')">
         <span></span>
         <div class="content">
             <p>Itens</p>
         </div>
     </div>
-    <div class="card card-10">
+    <div class="card card-10" onclick="goToPage('index_itens.html')">
         <span></span>
         <div class="content">
             <p>construções</p>
