--- a/index.html
+++ b/index.html
@@ -128,15 +128,19 @@
 
 <div class="container-cards">
     <div class="card card-6">
-        <span></span>
-        <div class="content">
-            <p>Eventos</p>
+        <a href="index_eventos.html">
+            <span></span>
+            <div class="content">
+                <p>Eventos</p>
+            </a>
         </div>
     </div>
     <div class="card card-7">
-        <span></span>
-        <div class="content">
-            <p>Tribo</p>
+        <a href="index_história.html">
+            <span></span>
+            <div class="content">
+                <p>Tribo</p>
+            </a>
         </div>
     </div>
     <div class="card card-8">
