--- a/index_história.html
+++ b/index_história.html
@@ -64,7 +64,7 @@
     <!-- Fim Nav-Bar ------------------------------------------------->
 <!-- Seção Início -->
 <div class="titulo_principal">
-    <h1 class="titulo_efeito">História</h1>
+    <h1 class="titulo_efeito">História e Tribos</h1>
 </div>
 
 <!-- carrossel-->
